Fix styling (#39)
* Adds feature flags and removes sidebar

* Re-adds back to site

* Updates device scroll bar to be inside container

* Fixes styling of the Visuals and Tabs to be responsive

* Fixes padding on device names

* Fixes issue where the icons were hidden in visual

* Gives parent container max-width of 1920px

* Fixes issue where a lot of devices looks weird

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #454950;
+  background: #45495000;
 }
 
 /* Handle */
@@ -30,3 +30,11 @@
   background: #595D62;
 }
 
+/* .device-container-content {
+  overflow: auto;
+}
+
+.device-container-content::-webkit-scrollbar-thumb {
+  background: #595D62;
+  width: 5px;
+} */
