--- a/src/Emulator/Emulator.css
+++ b/src/Emulator/Emulator.css
@@ -1,3 +1,5 @@
 .emulator {
   display: flex;
+  max-width: 1920px;
+  margin: auto;
 }
