--- a/src/Emulator/Instructions/Instructions.css
+++ b/src/Emulator/Instructions/Instructions.css
@@ -1,18 +1,19 @@
 .instructions-background {
   margin-left: 3.5rem;
   margin-top: 2vh;
-  z-index: -2;
 }
 
 .instructions {
   color: white;
   background-color: #454950;
   height: 96vh;
-  width: 24vw;
+  width: 15vw;
   border-radius: 10px;
   word-wrap: break-word;
   padding-left: 2vh;
   overflow: auto;
+  max-width: 335px;
+  min-width: 250px;
 }
 
 .instructions::-webkit-scrollbar {
@@ -78,4 +79,13 @@ ol {
   padding-top: 3vh;
   padding-bottom: 10%;
   color: darkgray;
+}
+
+.instructions__back-link-container {
+  display: flex;
+}
+
+.instructions__back-link-container svg {
+  margin: auto 0.5rem auto 0;
+  display: block;
 }
